unpackaged/main/default/objects/PagesApi__Form__c/PagesApi__Form__c.object-meta.xml
<CustomObject>
    <description>Build and publish responsive HTML5 web forms to portal communities or your public facing website.</description>
    <label>Form</label>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>