unpackaged/main/default/objects/PagesApi__Form__c/fields/FON_Lightning_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>FON_Lightning_Form_URL__c</fullName>
    <formula>&#39;https://us-tdm-tso-15eb63ff4c6-1626e3c741a.force.com/LightningMemberPortal/s/Form?id=&#39; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lightning Form URL</label>
    <type>Text</type>
</CustomField>