unpackaged/main/default/objects/PagesApi__Form__c/fields/FON_Public_Lightning_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>FON_Public_Lightning_Form_URL__c</fullName>
    <formula>&#39;https://www.ecchoonline.org/s/form?id=&#39; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Public Lightning Form URL</label>
    <type>Text</type>
</CustomField>