unpackaged/main/default/objects/PagesApi__Form__c/fields/Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_URL__c</fullName>
    <formula>&quot;https://us-tdm-tso-15eb63ff4c6-1626e-16e1cffda8f.force.com/LightningMemberPortal/cpbase__form?ID=&quot;&amp;Id</formula>
    <label>Form URL</label>
    <type>Text</type>
</CustomField>