unpackaged/main/default/objects/PagesApi__Form__c/fields/Lightning_form_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Lightning_form_URL_2__c</fullName>
    <formula>&#39;https://www.ecchoonline.org/s/formspage?id=&#39; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Private Lightning form URL</label>
    <type>Text</type>
</CustomField>