unpackaged/main/default/objects/PagesApi__Form__c/fields/PagesApi__Display_Style__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Display_Style__c</fullName>
    <description>Defines the display style for the Form. Can be Standard, Accordion or Wizard</description>
    <inlineHelpText>Defines the display style for the Form. Can be Standard, Accordion or Wizard</inlineHelpText>
    <label>Display Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Accordion</fullName>
            </value>
            <value>
                <fullName>Wizard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>