unpackaged/main/default/objects/PagesApi__Form__c/fields/PagesApi__Submit_Style__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Submit_Style__c</fullName>
    <description>Defines the submit style for the Form. Can be Url Location or Javascript</description>
    <inlineHelpText>Defines the submit style for the Form. Can be Url Location or Javascript</inlineHelpText>
    <label>Submit Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Javascript</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>