unpackaged/main/default/objects/PagesApi__Form__c/fields/PagesApi__Submit_Value__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Submit_Value__c</fullName>
    <description>URL Location or Javascript to execute on form submission</description>
    <inlineHelpText>URL Location or Javascript to execute on form submission</inlineHelpText>
    <label>Submit Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>