unpackaged/main/default/objects/PagesApi__Form__c/fields/PagesApi__User_Instructions__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__User_Instructions__c</fullName>
    <description>Enter the instructions you wish to show users while filling out the form.</description>
    <inlineHelpText>Enter the instructions you wish to show users while filling out the form.</inlineHelpText>
    <label>User Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>