unpackaged/main/default/objects/PagesApi__Form__c/fields/PagesApi__Wizard_Review_Instructions__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Wizard_Review_Instructions__c</fullName>
    <defaultValue>&quot;Please review your answers and make any necessary corrections before submitting this form.&quot;</defaultValue>
    <description>For Wizard-style forms only. This text appears on the final review screen.</description>
    <inlineHelpText>For Wizard-style forms only. This text appears on the final review screen.</inlineHelpText>
    <label>Wizard Review Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>