unpackaged/main/default/objects/PagesApi__Form__c/listViews/PagesApi__All.listView-meta.xml
<ListView>
    <fullName>PagesApi__All</fullName>
    <columns>NAME</columns>
    <columns>PagesApi__Description__c</columns>
    <columns>PagesApi__Display_Style__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Form_URL__c</columns>
    <columns>PagesApi__Submit_Style__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>FON</value>
    </filters>
    <label>All</label>
</ListView>